Modifiche varie Aggiunto toStringTUI per gli obiettivi Refactor e correzioni varie